stylesheet.css
* {
    margin: 0;
    padding: 0;
}

body {
    display: flex;
    justify-content: center;
}

.container {
    max-width: 1024px;
}

.main-container {
    width: 100%;
    padding: 35px;
    box-sizing: border-box;
    /* background-color: green; */
    padding-top: 0px;
}

/* <---Navbar---> */
nav {
    height: 95px;
    /* background-color: red; */
    display: flex;
    align-items: center;
    font-size: 15px;
    font-family: 'poppins', sans-serif;
    text-transform: capitalize;
    color: rgba(0, 0, 0, 0.712);
}

nav .image1 {
    margin-left: 35px;
    height: 55px;
    width: 170px;
}

nav .image2 {
    margin-left: 20px;
    width: 25px;
}

nav p {
    margin: 0px 20px;
}

nav p:hover {
    color: rgba(0, 0, 0, 0.500);
}

nav .item1 {
    margin-left: 100px;
}

/* <---Heading---> */

header {
    height: 320px;
    /* background-color: red; */
    font-family: 'Roboto', sans-serif;
    /* display: flex; */
    text-align: center;
    margin-top: 60px;

}

header h1 {
    font-weight: 300;
    font-size: 50px;
    margin-left: 40 px;
}

header div {
    display: flex;
    justify-content: center;
}

header div h1 b {
    font-family: 'poppins', sans-serif;
    font-weight: bolder;
}

header div img {
    margin-left: 20px;
    width: 110px;
    height: 30px;
    margin-top: 25px;
}

.para {
    margin-top: 40px;
    text-align: center;
    font-size: 24px;
    color: rgba(0, 0, 0, 0.815);
}

.button1 {
    background-color: #00B6D1;
    height: 50px;
    width: 300px;
    display: flex;
    align-items: center;
    border-radius: 8px;
    margin: 30px auto;
}

.button1:hover {
    background-color: #018ca1;
}

.button1 p {
    text-transform: uppercase;
    font-weight: bolder;
    font-size: 15px;
    color: white;
}
.button1 a{
    text-decoration: none;
}

/* <----main content ----> */

main {
    height: 1200px;
}

/* <----heading bar in main ----> */

.heading2 {
    display: flex;
    font-family: 'poppins', sans-serif;
    height: 80px;
}

.heading2 img {
    height: 60px;
}

.heading2 p:nth-child(2) {
    font-size: 23px;
    margin-top: 10px;
    margin-right: 5px;
    margin-left: 20px;
    color: rgba(0, 0, 0, 0.850);
    font-weight: 500;
}

.heading2 p:nth-child(3) {
    font-size: 13px;
    margin-top: 20px;
    margin-right: 5px;
    color: rgba(0, 0, 0, 0.850);
}

/* <----Cards----> */

.cards {
    height: 92%;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(4, 1fr);
    justify-items: center;
    align-items: center;
}

.card {
    height: 90%;
    width: 60%;
    background-color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: 'roboto',sans-serif;
}
.lang{
margin-top: 20%;
font-size: 20px;
font-weight: bolder;
color: rgba(0, 0, 0, 0.900);
}
.lang-name{
margin-top: 10px;
margin-bottom: 25px;
font-size: 12px;
color: rgba(0, 0, 0, 0.800);

}
.download1{
height: 38px;
width: 67%;
background-color: #00B6D1;
display: flex;
justify-content: center;
align-items: center;
border-radius: 5px;
font-size: 12px;
color: white;
font-weight: bolder;
cursor: pointer;
text-decoration: none;

}
.download1:hover{
    background-color: #04a4bd;
}
.download2{
    height: 38px;
    width: 68%;
    background-color: #5CB85C;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 5px;
    font-size: 12px;
    margin-top: 10px;
color: white;
font-weight: bolder;

cursor: pointer;

}
.download2:hover{
    background-color: #4c994c;
}
.download-link{
  text-decoration: none;
  color: white;
}

/* <---section part of website---> */

section{
    background-color: rgb(34, 34, 34);
    height: 730px;
    padding: 3%;
    color: white;
    box-sizing: border-box;
    font-family: 'poppins', sans-serif;

}

/* <---container-1---> */

.section-container1{
    min-height: 350px;
    width: 100%;
display: flex;
flex-wrap: wrap;
}
.section-container1 .text{
width: 460px;
height: 80px;
padding: 10px;
text-align: center;
margin-top: 165px;
}
.section-container1 .text h2{

    font-weight: 650;
    font-size: 23px;
    margin-bottom: 5px;

}
.section-container1 .text p{

    font-size: 15px;

}
.section-container1 .box{
    width: 480px;
    height: 360px;
    margin-left: auto;
    padding: 1%;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    
}
.section-container1 .box .inner-box{
    background-color: white;
    height: 270px;
    width: 75%;
    border-radius: 12px;
    padding: 8%;
    color: black;
    box-sizing: border-box;
}
.section-container1 .box .inner-box h2 {

    font-size: 22px;
    text-align: center;
    font-weight: 450;
    color: #00B6D1;
    margin-bottom: 22px;
}   
.section-container1 .box .inner-box label {

    display: block;
    font-size: 14px;
    text-align: center;
    font-weight: 400;
    color: rgba(0, 0, 0, 0.808);
}   
.section-container1 .box .inner-box input {

    height: 45px;
    width: 99%;
    font-size: 15px;
    border: 1px solid;
    border-color: rgb(51 51 51 / 16%);
    outline: none;
    padding: 4%;
    box-sizing: border-box;
}
.section-container1 .box .inner-box .sign-up {
 
    height: 50px;
    background-color: #00B6D1;
    border-radius: 5px;
    margin-top: 20px;
    box-sizing: border-box;
    text-align: center;
    font-size: 18px;
    font-weight: 500;
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;
    text-transform: uppercase;
    cursor: pointer;

}

/* <---container-2---> */

.section-container2{
    margin-top: 50px;
    color: white;
    height: 350px;
    padding: 0px 17px;
}
.section-container2 h2{
    font-weight: 400;
    margin: 10px 0px;
 
    font-size: 22px;
}
.section-container2 p{
    font-size: 14px;
    line-height: 38px;
}

/* <---footer part of webpage---> */

